0.4 (2009-11-??)

- Added options to show/hide number, file size and file type
- Added numbering for videos

0.3 (2009-08-17)

- Added option to setup maximal number of collected videos
- Show content type and size for video links
- Added content type guessing based on filename extension
- Small fixes

0.2 (2009-08-13)

- Simplified package structure
- Added handling for referrers

0.1 (2009-08-03)

- Initial release